sandbox/libc/unistd/unistd.pas


function getpgid(__pid:Tpid_t):Tpid_t;cdecl;external libc;
{$endif}
{ Set the process group ID of the process matching PID to PGID.
   If PID is zero, the current process's process group ID is set.
   If PGID is zero, the process ID of the process is used.   }

function setpgid(__pid:Tpid_t; __pgid:Tpid_t):longint;cdecl;external libc;
{$if defined __USE_MISC || defined __USE_XOPEN_EXTENDED}
{ Both System V and BSD have `setpgrp' functions, but with different
   calling conventions.  The BSD function is the same as POSIX.1 `setpgid'
   (above).  The System V function takes no arguments and puts the calling
   process in its on group like `setpgid (0, 0)'.

   New programs should always use `setpgid' instead.

   GNU provides the POSIX.1 function.   }
{ Set the process group ID of the calling process to its own PID.
   This is exactly the same as `setpgid (0, 0)'.   }

function setpgrp:longint;cdecl;external libc;
{$endif}
{ Use misc or X/Open.   }
{ Create a new session with the calling process as its leader.
   The process group IDs of the session and the calling process
   are set to the process ID of the calling process, which is returned.   }

function setsid:Tpid_t;cdecl;external libc;
{$if defined __USE_XOPEN_EXTENDED || defined __USE_XOPEN2K8}
{ Return the session ID of the given process.   }

function getsid(__pid:Tpid_t):Tpid_t;cdecl;external libc;
{$endif}
{ Get the real user ID of the calling process.   }

function getuid:Tuid_t;cdecl;external libc;
{ Get the effective user ID of the calling process.   }
function geteuid:Tuid_t;cdecl;external libc;
{ Get the real group ID of the calling process.   }
function getgid:Tgid_t;cdecl;external libc;
{ Get the effective group ID of the calling process.   }
function getegid:Tgid_t;cdecl;external libc;
{ If SIZE is zero, return the number of supplementary groups
   the calling process is in.  Otherwise, fill in the group IDs
   of its supplementary groups in LIST and return the number written.   }
function getgroups(__size:longint; __list:Pgid_t):longint;cdecl;external libc;
{$ifdef __USE_GNU}
{ Return nonzero iff the calling process is in group GID.   }
function group_member(__gid:Tgid_t):longint;cdecl;external libc;
{$endif}
{ Set the user ID of the calling process to UID.
   If the calling process is the super-user, set the real
   and effective user IDs, and the saved set-user-ID to UID;
   if not, the effective user ID is set to UID.   }

function setuid(__uid:Tuid_t):longint;cdecl;external libc;
{$if defined __USE_MISC || defined __USE_XOPEN_EXTENDED}
{ Set the real user ID of the calling process to RUID,
   and the effective user ID of the calling process to EUID.   }

function setreuid(__ruid:Tuid_t; __euid:Tuid_t):longint;cdecl;external libc;
{$endif}
{$ifdef __USE_XOPEN2K}
{ Set the effective user ID of the calling process to UID.   }

function seteuid(__uid:Tuid_t):longint;cdecl;external libc;
{$endif}
{ Use POSIX.1-2001.   }
{ Set the group ID of the calling process to GID.
   If the calling process is the super-user, set the real
   and effective group IDs, and the saved set-group-ID to GID;
   if not, the effective group ID is set to GID.   }

function setgid(__gid:Tgid_t):longint;cdecl;external libc;
{$if defined __USE_MISC || defined __USE_XOPEN_EXTENDED}
{ Set the real group ID of the calling process to RGID,
   and the effective group ID of the calling process to EGID.   }

function setregid(__rgid:Tgid_t; __egid:Tgid_t):longint;cdecl;external libc;
{$endif}
{$ifdef __USE_XOPEN2K}
{ Set the effective group ID of the calling process to GID.   }

function setegid(__gid:Tgid_t):longint;cdecl;external libc;
{$endif}
{ Use POSIX.1-2001.   }
{$ifdef __USE_GNU}
{ Fetch the real user ID, effective user ID, and saved-set user ID,
   of the calling process.   }

function getresuid(__ruid:Puid_t; __euid:Puid_t; __suid:Puid_t):longint;cdecl;external libc;
{ Fetch the real group ID, effective group ID, and saved-set group ID,
   of the calling process.   }
function getresgid(__rgid:Pgid_t; __egid:Pgid_t; __sgid:Pgid_t):longint;cdecl;external libc;
{ Set the real user ID, effective user ID, and saved-set user ID,
   of the calling process to RUID, EUID, and SUID, respectively.   }
function setresuid(__ruid:Tuid_t; __euid:Tuid_t; __suid:Tuid_t):longint;cdecl;external libc;
{ Set the real group ID, effective group ID, and saved-set group ID,
   of the calling process to RGID, EGID, and SGID, respectively.   }
function setresgid(__rgid:Tgid_t; __egid:Tgid_t; __sgid:Tgid_t):longint;cdecl;external libc;
{$endif}
{ Clone the calling process, creating an exact copy.
   Return -1 for errors, 0 to the new process,
   and the process ID of the new process to the old process.   }

function fork:Tpid_t;cdecl;external libc;
{ Clone the calling process, but without copying the whole address space.
   The calling process is suspended until the new process exits or is
   replaced by a call to `execve'.  Return -1 for errors, 0 to the new process,
   and the process ID of the new process to the old process.   }
function vfork:Tpid_t;cdecl;external libc;
{$ifdef __USE_GNU}
{ This is similar to fork, however it does not run the atfork handlers
   neither reinitialize any internal locks in multithread case.
   Different than fork, _Fork is async-signal-safe.   }
function _Fork:Tpid_t;cdecl;external libc;
{$endif}
{ Return the pathname of the terminal FD is open on, or NULL on errors.
   The returned storage is good only until the next call to this function.   }

function ttyname(__fd:longint):Pchar;cdecl;external libc;
{ Store at most BUFLEN characters of the pathname of the terminal FD is
   open on in BUF.  Return 0 on success, otherwise an error number.   }
function ttyname_r(__fd:longint; __buf:Pchar; __buflen:Tsize_t):longint;cdecl;external libc;
{ Return 1 if FD is a valid descriptor associated
   with a terminal, zero if not.   }
function isatty(__fd:longint):longint;cdecl;external libc;
{$ifdef __USE_MISC}
{ Return the index into the active-logins file (utmp) for
   the controlling terminal.   }
function ttyslot:longint;cdecl;external libc;
{$endif}
{ Make a link to FROM named TO.   }

function link(__from:Pchar; __to:Pchar):longint;cdecl;external libc;
{$ifdef __USE_ATFILE}
{ Like link but relative paths in TO and FROM are interpreted relative
   to FROMFD and TOFD respectively.   }
function linkat(__fromfd:longint; __from:Pchar; __tofd:longint; __to:Pchar; __flags:longint):longint;cdecl;external libc;
{$endif}
{$if defined __USE_XOPEN_EXTENDED || defined __USE_XOPEN2K}
{ Make a symbolic link to FROM named TO.   }

function symlink(__from:Pchar; __to:Pchar):longint;cdecl;external libc;
{ Read the contents of the symbolic link PATH into no more than
   LEN bytes of BUF.  The contents are not null-terminated.
   Returns the number of characters read, or -1 for errors.   }
function readlink(__path:Pchar; __buf:Pchar; __len:Tsize_t):Tssize_t;cdecl;external libc;
{$endif}
{ Use POSIX.1-2001.   }
{$ifdef __USE_ATFILE}
{ Like symlink but a relative path in TO is interpreted relative to TOFD.   }

function symlinkat(__from:Pchar; __tofd:longint; __to:Pchar):longint;cdecl;external libc;
{ Like readlink but a relative PATH is interpreted relative to FD.   }
function readlinkat(__fd:longint; __path:Pchar; __buf:Pchar; __len:Tsize_t):Tssize_t;cdecl;external libc;
{$endif}
{ Remove the link NAME.   }

function unlink(__name:Pchar):longint;cdecl;external libc;
{$ifdef __USE_ATFILE}
{ Remove the link NAME relative to FD.   }
function unlinkat(__fd:longint; __name:Pchar; __flag:longint):longint;cdecl;external libc;
{$endif}
{ Remove the directory PATH.   }

function rmdir(__path:Pchar):longint;cdecl;external libc;
{ Return the foreground process group ID of FD.   }
function tcgetpgrp(__fd:longint):Tpid_t;cdecl;external libc;
{ Set the foreground process group ID of FD set PGRP_ID.   }
function tcsetpgrp(__fd:longint; __pgrp_id:Tpid_t):longint;cdecl;external libc;
{ Return the login name of the user.

   This function is a possible cancellation point and therefore not
   marked with .   }
function getlogin:Pchar;cdecl;external libc;
{$ifdef __USE_POSIX199506}
{ Return at most NAME_LEN characters of the login name of the user in NAME.
   If it cannot be determined or some other error occurred, return the error
   code.  Otherwise return 0.

   This function is a possible cancellation point and therefore not
   marked with .   }
function getlogin_r(__name:Pchar; __name_len:Tsize_t):longint;cdecl;external libc;
{$endif}
{$ifdef __USE_MISC}
{ Set the login name returned by `getlogin'.   }

function setlogin(__name:Pchar):longint;cdecl;external libc;
{$endif}
{$ifdef __USE_POSIX2}
{ Get definitions and prototypes for functions to process the
   arguments in ARGV (ARGC of them, minus the program name) for
   options given in OPTS.   }
{$include <bits/getopt_posix.h>}
{$endif}
{$if defined __USE_XOPEN_EXTENDED || defined __USE_XOPEN2K}
{ Put the name of the current host in no more than LEN bytes of NAME.
   The result is null-terminated if LEN is large enough for the full
   name and the terminator.   }

function gethostname(__name:Pchar; __len:Tsize_t):longint;cdecl;external libc;
{$endif}
{$if defined __USE_MISC}
{ Set the name of the current host to NAME, which is LEN bytes long.
   This call is restricted to the super-user.   }

function sethostname(__name:Pchar; __len:Tsize_t):longint;cdecl;external libc;
{ Set the current machine's Internet number to ID.
   This call is restricted to the super-user.   }
function sethostid(__id:longint):longint;cdecl;external libc;
{ Get and set the NIS (aka YP) domain name, if any.
   Called just like `gethostname' and `sethostname'.
   The NIS domain name is usually the empty string when not using NIS.   }
function getdomainname(__name:Pchar; __len:Tsize_t):longint;cdecl;external libc;
function setdomainname(__name:Pchar; __len:Tsize_t):longint;cdecl;external libc;
{ Revoke access permissions to all processes currently communicating
   with the control terminal, and then send a SIGHUP signal to the process
   group of the control terminal.   }
function vhangup:longint;cdecl;external libc;
{ Revoke the access of all descriptors currently open on FILE.   }
function revoke(__file:Pchar):longint;cdecl;external libc;
{ Enable statistical profiling, writing samples of the PC into at most
   SIZE bytes of SAMPLE_BUFFER; every processor clock tick while profiling
   is enabled, the system examines the user PC and increments
   SAMPLE_BUFFER[((PC - OFFSET) / 2) * SCALE / 65536].  If SCALE is zero,
   disable profiling.  Returns zero on success, -1 on error.   }
function profil(__sample_buffer:Pword; __size:Tsize_t; __offset:Tsize_t; __scale:dword):longint;cdecl;external libc;
{ Turn accounting on if NAME is an existing file.  The system will then write
   a record for each process as it terminates, to this file.  If NAME is NULL,
   turn accounting off.  This call is restricted to the super-user.   }
function acct(__name:Pchar):longint;cdecl;external libc;
{ Successive calls return the shells listed in `/etc/shells'.   }
function getusershell:Pchar;cdecl;external libc;
procedure endusershell;cdecl;external libc;
{ Discard cached info.   }
procedure setusershell;cdecl;external libc;
{ Rewind and re-read the file.   }
{ Put the program in the background, and dissociate from the controlling
   terminal.  If NOCHDIR is zero, do `chdir ("/")'.  If NOCLOSE is zero,
   redirects stdin, stdout, and stderr to /dev/null.   }
function daemon(__nochdir:longint; __noclose:longint):longint;cdecl;external libc;
{$endif}
{ Use misc.   }
{$if defined __USE_MISC || (defined __USE_XOPEN && !defined __USE_XOPEN2K)}
{ Make PATH be the root directory (the starting point for absolute paths).
   This call is restricted to the super-user.   }
